--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vinicius Cerqueira | Desenvolvedor Front-End</title>
-  <meta name="description" content="Portfólio de Vinicius Cerqueira, desenvolvedor front-end especializado em React, JavaScript e interfaces modernas. Transformando designs em experiências digitais incríveis." />
+  <title>Vinicius Cerqueira | Desenvolvedor Full Stack</title>
+  <meta name="description" content="Portfólio de Vinicius Cerqueira, desenvolvedor full stack. Elevando o padrão de produtos digitais com React, Node.js e TypeScript. Transformando designs em experiências digitais incríveis." />
   <meta name="author" content="Vinicius Cerqueira" />
-  <meta name="keywords" content="desenvolvedor front-end, React, JavaScript, portfólio, web developer, São Paulo" />
+  <meta name="keywords" content="desenvolvedor full stack, React, TypeScript, portfólio, web developer, São Paulo" />
 
-  <meta property="og:title" content="Vinicius Cerqueira | Desenvolvedor Front-End" />
-  <meta property="og:description" content="Desenvolvedor front-end especializado em React, JavaScript e interfaces modernas." />
-  
+  <meta property="og:title" content="Vinicius Cerqueira | Desenvolvedor Full Stack" />
+  <meta property="og:description" content="Desenvolvedor full stack. Elevando o padrão de produtos digitais com React, Node.js e TypeScript." />
+
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Vinicius Cerqueira | Desenvolvedor Front-End" />
-  <meta name="twitter:description" content="Desenvolvedor front-end especializado em React, JavaScript e interfaces modernas." />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:title" content="Vinicius Cerqueira | Desenvolvedor Full Stack" />
+  <meta name="twitter:description" content="Desenvolvedor full stack. Elevando o padrão de produtos digitais com React, Node.js e TypeScript." />
 
-  <link rel="canonical" href="https://joaosilva.dev" />
+  <link rel="canonical" href="https://www.linkedin.com/in/viniciusfsc/" />
 </head>
 
 <body>
